# Harmony

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  accuracy.txt  infer.cpp  project_root.py  results.txt  time.txt
.devcontainer/: devcontainer.json
core/: dependencies.txt  main.cpp  main.py
core/audio/: audio_metadata.cpp  audio_metadata.hpp
core/cleaning/: cleaner.cpp  cleaner.hpp
core/feature_extractors/: chroma.cpp  feature.cpp  feature_extractor.cpp  feature_utils.cpp  mel_spectrogram.cpp  mfcc.cpp  spectral_contrast.cpp  tonnetz.cpp
core/model/: knn.cpp  lda.cpp  svm.cpp
core/notebooks/: 1_data_exploration.ipynb
core/preprocessing/: audio_preprocessor.cpp  audio_preprocessor.hpp
core/src_files/data/: cleaner.py  getAudioLength.cpp  getBestThresholdFiles.CPP  loader.py
core/src_files/feature_extractors/: mel_spectrogram.cpp  spectral_contrast.cpp  tonnetz.cpp
core/stacking/: estimators.cpp  estimators.hpp  stacking_classifier.cpp  stacking_classifier.hpp
data/CSV'S/: 10000FEMALES_SAMPLE.csv  10000MALES_SAMPLE.csv  20000_SAMPLE.csv
data/datasets/: README.txt
deploy/: .dockerignore  docker-compose.yaml  dockerfile
docs/: Report.tex
include/: chroma.h  feature.h  feature_extractor.h  knn.h  lda.h  mel_spectrogram.h  mfcc.h  spectral_contrast.h  svm.h  tonnetz.h
models/age/: config.txt  summary.txt
models/age_2/: summary.txt
models/age_3/: summary.txt
models/both/: config.txt  summary.txt
models/gender/: summary.txt
models/gender_2/: summary.txt
models/gender_3/: summary.txt
tools/: audio_util.cpp  audio_util.hpp  clean_dataset.cpp  extract_features.cpp  inference.cpp  process_dataset.cpp  stacking.cpp  tqdm.cpp
utils/: arg_parser.hpp  logger.cpp  logger.hpp
